Fix menu overlay being too dark

--- a/src/assets/styles/app/_app.scss
+++ b/src/assets/styles/app/_app.scss
@@ -62,7 +62,7 @@ h1 {
   left: 0;
   right: 0;
   bottom: 0;
-  background: hsl(0, 0%, 0%);
+  background: $bg-dark;
   opacity: 0;
   content: ' ';
   user-select: none;
